web-infras/parser/tests/fixtures/babel/core/object/invalid-getter-param/output.txt
[SyntaxError]: getter functions must have no arguments (1,8)
1|({ get prop(x) {} })
 |      ^
